src/main/default/objects/Qualification_Requirement__c/Qualification_Requirement__c.object-meta.xml
<CustomObject>
    <label>Qualification Requirement</label>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Qualification Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>