src/main/default/objects/Qualification_Requirement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Qualification Requirements</relationshipLabel>
    <relationshipName>Qualification_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>