src/main/default/objects/Qualification_Requirement__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Qualification Category</description>
    <formula>TEXT(Qualification__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Qualification Category</inlineHelpText>
    <label>Category</label>
    <type>Text</type>
</CustomField>