src/main/default/objects/Qualification_Requirement__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Qualification Requirements</relationshipLabel>
    <relationshipName>Qualification_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>