src/main/default/objects/Qualification_Requirement__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <referenceTo>Qualification__c</referenceTo>
    <relationshipLabel>Qualification Requirements</relationshipLabel>
    <relationshipName>Qualification_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>